# FileMover

./: CHANGELOG.md  README.md  pyproject.toml  requirements.txt
examples/: example_mover_1.json  example_mover_2.json  example_mover_3.json
src/: filemover.py  mover.py  mover_config.py  rename_config.py
src/filemover/: __init__.py  logger.py  match_files_config.py  metadata.py  mover.py  mover_builder.py  mover_config.py  rename_config.py  scripts.py
tests/: test_file_match_rule.py  test_mover.py  test_rename_config.py
