[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["filemover"]
package-dir = {"" = "src"}

[project]
name = "filemover"
version = "1.2.0"
description = "it mova da files :3"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "Claire Childers", email = "clairechilders@oakland.edu" }
]
readme = "README.md"
dependencies = [
    "pytz"
]

[project.urls]
Homepage = "https://github.com/CLDC-OU/FileMover"
Repository = "https://github.com/CLDC-OU/FileMover.git"
