[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["filemover*"]

[project]
name = "filemover"
version = "1.3.0"
description = "it mova da files :3"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "Claire Childers", email = "clairechilders@oakland.edu" }
]
readme = "README.md"
dependencies = [
    "pytz",
    "colorama"
]

[project.urls]
Homepage = "https://github.com/CLDC-OU/FileMover"
Repository = "https://github.com/CLDC-OU/FileMover.git"
